# cookiecutter-rospy

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
{{cookiecutter.project_slug}}/launch/: {{cookiecutter.project_slug}}.launch
{{cookiecutter.project_slug}}/nodes/: {{cookiecutter.project_slug}}_node.py
